force-app/main/default/objects/Opportunity/fields/MaxStart__c.field-meta.xml
<CustomField>
    <fullName>MaxStart__c</fullName>
    <label>MaxInicio</label>
    <summarizedField>Opportunity_stage_log__c.Start__c</summarizedField>
    <summaryForeignKey>Opportunity_stage_log__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>