force-app/main/default/objects/Opportunity/fields/Metodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Pago__c</fullName>
    <description>Catalago con los diferentes metodos de pagos aceptados por el SAT</description>
    <label>Metodo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Cheque nominativo</fullName>
            </value>
            <value>
                <fullName>Transferencia electrónica de fondos</fullName>
            </value>
            <value>
                <fullName>Tarjeta de Crédito</fullName>
            </value>
            <value>
                <fullName>Monedero electrónico</fullName>
            </value>
            <value>
                <fullName>Dinero electrónico</fullName>
            </value>
            <value>
                <fullName>Vales de despensa</fullName>
            </value>
            <value>
                <fullName>Tarjeta de débito</fullName>
            </value>
            <value>
                <fullName>Tarjeta de servicios</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>