force-app/main/default/objects/Opportunity/fields/MinEnd__c.field-meta.xml
<CustomField>
    <fullName>MinEnd__c</fullName>
    <label>MinFin</label>
    <summarizedField>Opportunity_stage_log__c.End__c</summarizedField>
    <summaryForeignKey>Opportunity_stage_log__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>