force-app/main/default/objects/Opportunity/fields/MinStart__c.field-meta.xml
<CustomField>
    <fullName>MinStart__c</fullName>
    <label>MinInicio</label>
    <summarizedField>Opportunity_stage_log__c.Start__c</summarizedField>
    <summaryForeignKey>Opportunity_stage_log__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>