force-app/main/default/objects/Opportunity/fields/Modify_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Modify_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requerido para porceder a un modificar una oportunidad en Cotizaciones</description>
    <label>Modificar oportunidad</label>
    <type>Checkbox</type>
</CustomField>