force-app/main/default/objects/Opportunity/fields/MontoDoc__c.field-meta.xml
<CustomField>
    <fullName>MontoDoc__c</fullName>
    <description>Monto del documento</description>
    <label>Monto pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>