force-app/main/default/objects/Opportunity/fields/MontoPagadoDoc__c.field-meta.xml
<CustomField>
    <fullName>MontoPagadoDoc__c</fullName>
    <description>Monto pagado del documento</description>
    <label>Monto pagado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>