force-app/main/default/objects/Opportunity/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>¿Porque Ganaste/Perdiste la Oportunidad?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandono proceso</fullName>
            </value>
            <value>
                <fullName>Cobertura</fullName>
            </value>
            <value>
                <fullName>Cobertura no satisfactoria</fullName>
            </value>
            <value>
                <fullName>Comisión / Precio</fullName>
            </value>
            <value>
                <fullName>Condiciones Comerciales</fullName>
            </value>
            <value>
                <fullName>Contacto no quiso atender</fullName>
            </value>
            <value>
                <fullName>Continuara con proveedor</fullName>
            </value>
            <value>
                <fullName>Funcionalidad-Control</fullName>
                <label>Control</label>
            </value>
            <value>
                <fullName>Conveniencia Fiscal</fullName>
            </value>
            <value>
                <fullName>Descuento no es suficiente</fullName>
            </value>
            <value>
                <fullName>Eligio otro proveedor</fullName>
            </value>
            <value>
                <fullName>Experiencias anteriores</fullName>
            </value>
            <value>
                <fullName>Financiamiento AMEX</fullName>
            </value>
            <value>
                <fullName>Financiamiento con Amex</fullName>
            </value>
            <value>
                <fullName>Funcionalidad de Apps</fullName>
            </value>
            <value>
                <fullName>Funcionalidades del Producto</fullName>
            </value>
            <value>
                <fullName>Funcionalidades y Controles de Plataforma</fullName>
            </value>
            <value>
                <fullName>Funcionalidades y diferenciales del producto</fullName>
            </value>
            <value>
                <fullName>Funcionalidad y Controles de Plataforma</fullName>
            </value>
            <value>
                <fullName>Inconsistencia en Plataforma</fullName>
            </value>
            <value>
                <fullName>Mal servicio</fullName>
            </value>
            <value>
                <fullName>No pago</fullName>
            </value>
            <value>
                <fullName>No pidio</fullName>
            </value>
            <value>
                <fullName>No quiso decir la razón</fullName>
            </value>
            <value>
                <fullName>No se pudo contactar</fullName>
            </value>
            <value>
                <fullName>Otro motivo</fullName>
            </value>
            <value>
                <fullName>Funcionalidad-Plataformas</fullName>
                <label>Plataforma</label>
            </value>
            <value>
                <fullName>Plazo para pago</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Prefiere otra marca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>