force-app/main/default/objects/Opportunity/fields/Motivo_incremento__c.field-meta.xml
<CustomField>
    <fullName>Motivo_incremento__c</fullName>
    <label>Motivo incremento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ampliación de operación</fullName>
            </value>
            <value>
                <fullName>Aumento del consumo de combustible</fullName>
            </value>
            <value>
                <fullName>Aumento del valor facial</fullName>
            </value>
            <value>
                <fullName>Aumento de número de empleados</fullName>
            </value>
            <value>
                <fullName>Estacionalidad</fullName>
            </value>
            <value>
                <fullName>Fusión y adquisición</fullName>
            </value>
            <value>
                <fullName>Navideños</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Tomada de la competencia</fullName>
            </value>
            <value>
                <fullName>Afiliados</fullName>
                <isActive>false</isActive>
                <label>Afiliados</label>
            </value>
            <value>
                <fullName>Aumento del precio de combustible</fullName>
                <isActive>false</isActive>
                <label>Aumento del precio de combustible</label>
            </value>
            <value>
                <fullName>Cobranza</fullName>
                <isActive>false</isActive>
                <label>Cobranza</label>
            </value>
            <value>
                <fullName>Control Transaccional</fullName>
                <isActive>false</isActive>
                <label>Control Transaccional</label>
            </value>
            <value>
                <fullName>Dificultad financiera</fullName>
                <isActive>false</isActive>
                <label>Dificultad financiera</label>
            </value>
            <value>
                <fullName>Disminuición de la operación</fullName>
                <isActive>false</isActive>
                <label>Disminuición de la operación</label>
            </value>
            <value>
                <fullName>Disminuición del número empleados</fullName>
                <isActive>false</isActive>
                <label>Disminuición del número empleados</label>
            </value>
            <value>
                <fullName>Facturación</fullName>
                <isActive>false</isActive>
                <label>Facturación</label>
            </value>
            <value>
                <fullName>Logística</fullName>
                <isActive>false</isActive>
                <label>Logística</label>
            </value>
            <value>
                <fullName>Optimización del consumo de combustible</fullName>
                <isActive>false</isActive>
                <label>Optimización del consumo de combustible</label>
            </value>
            <value>
                <fullName>Piloto/Migración a la competencia</fullName>
                <isActive>false</isActive>
                <label>Piloto/Migración a la competencia</label>
            </value>
            <value>
                <fullName>Plataformas</fullName>
                <isActive>false</isActive>
                <label>Plataformas</label>
            </value>
            <value>
                <fullName>Prevención a Fraudes</fullName>
                <isActive>false</isActive>
                <label>Prevención a Fraudes</label>
            </value>
            <value>
                <fullName>Problemas operativos</fullName>
                <isActive>false</isActive>
                <label>Problemas operativos</label>
            </value>
            <value>
                <fullName>SAC</fullName>
                <isActive>false</isActive>
                <label>SAC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>