force-app/main/default/objects/Opportunity/fields/Necesidad__c.field-meta.xml
<CustomField>
    <fullName>Necesidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Necesidad</label>
    <referenceTo>Necesidad__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>