force-app/main/default/objects/Opportunity/fields/NombreOpp_2__c.field-meta.xml
<CustomField>
    <fullName>NombreOpp_2__c</fullName>
    <label>Nombre inicial de la oportunidad</label>
    <length>200</length>
    <type>Text</type>
</CustomField>