force-app/main/default/objects/Opportunity/fields/NumberOfShipments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfShipments__c</fullName>
    <description>Campo resumen que sumariza los números de envíos de las cotizaciones relacionadas a la oportunidad.</description>
    <label>Número de envíos</label>
    <summarizedField>Quote.NumberOfShipments__c</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>