force-app/main/default/objects/Opportunity/fields/NumeroAltaCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroAltaCliente__c</fullName>
    <label>Folio de asignación ADV</label>
    <length>30</length>
    <type>Text</type>
</CustomField>