force-app/main/default/objects/Opportunity/fields/NumeroOportunidad__c.field-meta.xml
<CustomField>
    <fullName>NumeroOportunidad__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Número de oportunidad</label>
    <type>AutoNumber</type>
</CustomField>