force-app/main/default/objects/Opportunity/fields/NumeroReasignacion__c.field-meta.xml
<CustomField>
    <fullName>NumeroReasignacion__c</fullName>
    <label>Número de Reasignación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>