force-app/main/default/objects/Opportunity/fields/NumPedido__c.field-meta.xml
<CustomField>
    <fullName>NumPedido__c</fullName>
    <description>Número de pedido</description>
    <label>Núm. pedido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>