force-app/main/default/objects/Opportunity/fields/OperationLevel__c.field-meta.xml
<CustomField>
    <fullName>OperationLevel__c</fullName>
    <label>Nivel de Operación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Familia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medio de pago</fullName>
            </value>
            <value>
                <fullName>Integración con API’s</fullName>
            </value>
            <value>
                <fullName>Medio de pago + Comprobación de gastos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>