force-app/main/default/objects/Opportunity/fields/Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Oportunidades__c</fullName>
    <label>Oportunidades</label>
    <length>100</length>
    <type>Text</type>
</CustomField>