force-app/main/default/objects/Opportunity/fields/OportunidadPadre__c.field-meta.xml
<CustomField>
    <fullName>OportunidadPadre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OportunidadPadre</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>