force-app/main/default/objects/Opportunity/fields/OpportunityWinIn__c.field-meta.xml
<CustomField>
    <fullName>OpportunityWinIn__c</fullName>
    <label>Oportunidad ganada en</label>
    <type>Date</type>
</CustomField>