force-app/main/default/objects/Opportunity/fields/OwnerChangeRequired__c.field-meta.xml
<CustomField>
    <fullName>OwnerChangeRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the opp is created by an user that is not form the business unit related the opportunity solution. The checkbox is unchecked when the owner changes to one from the correct business unit for the opportunity solution.</description>
    <label>Cambio de propietario requerido</label>
    <type>Checkbox</type>
</CustomField>