force-app/main/default/objects/Opportunity/fields/OwnerOPPId__c.field-meta.xml
<CustomField>
    <fullName>OwnerOPPId__c</fullName>
    <formula>Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Propietario Oportunidad</label>
    <type>Text</type>
</CustomField>