force-app/main/default/objects/Opportunity/fields/Pais_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_facturacion__c</fullName>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País de facturación</label>
    <type>Text</type>
</CustomField>