force-app/main/default/objects/Opportunity/fields/PaisOrigen_FTt__c.field-meta.xml
<CustomField>
    <fullName>PaisOrigen_FTt__c</fullName>
    <formula>Account.BillingCountry</formula>
    <label>País de origen</label>
    <type>Text</type>
</CustomField>