force-app/main/default/objects/Opportunity/fields/Pedidos__c.field-meta.xml
<CustomField>
    <fullName>Pedidos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedidos</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Pedidos)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>