force-app/main/default/objects/Opportunity/fields/PorcentajeComisionPerdida__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeComisionPerdida__c</fullName>
    <label>Porcentaje comisión perdida</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>