force-app/main/default/objects/Opportunity/fields/PorcentajeProbabilidadPerdida__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeProbabilidadPerdida__c</fullName>
    <label>Porcentaje de probabilidad perdida</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>