force-app/main/default/objects/Opportunity/fields/Probabilidad_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Probabilidad_Inicial__c</fullName>
    <label>Probabilidad Inicial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>