force-app/main/default/objects/Opportunity/fields/Producto_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Producto_cotizacion__c</fullName>
    <label>Producto cotización</label>
    <length>100</length>
    <type>Text</type>
</CustomField>