force-app/main/default/objects/Opportunity/fields/Producto_PL__c.field-meta.xml
<CustomField>
    <fullName>Producto_PL__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Familia__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Productos</valueSetName>
    </valueSet>
</CustomField>