force-app/main/default/objects/Opportunity/fields/PropietarioOportunidad_FText__c.field-meta.xml
<CustomField>
    <fullName>PropietarioOportunidad_FText__c</fullName>
    <formula>Owner.FirstName + &#39; &#39; +  Owner.LastName</formula>
    <label>Propietario de la Oportunidad</label>
    <type>Text</type>
</CustomField>