force-app/main/default/objects/Opportunity/fields/PruebaNombreCampania_FText__c.field-meta.xml
<CustomField>
    <fullName>PruebaNombreCampania_FText__c</fullName>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prueba nombre de campaña</label>
    <type>Text</type>
</CustomField>