force-app/main/default/objects/Opportunity/fields/QuotesInApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>QuotesInApprovalProcess__c</fullName>
    <description>Número de cotizaciones en un proceso de aprobación pendiente.</description>
    <label>Cotizaciones en proceso de aprobación</label>
    <summaryFilterItems>
        <field>Quote.ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>