force-app/main/default/objects/Opportunity/fields/QuotesWithRejectedApproval__c.field-meta.xml
<CustomField>
    <fullName>QuotesWithRejectedApproval__c</fullName>
    <description>Número de cotizaciones que se encuentran con aprobación rechazada.</description>
    <label>Cotizaciones con aprobación rechazada</label>
    <summaryFilterItems>
        <field>Quote.ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Rechazada</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>