force-app/main/default/objects/Opportunity/fields/Razon_social__c.field-meta.xml
<CustomField>
    <fullName>Razon_social__c</fullName>
    <formula>Entidad_Cuenta__r.NombreEL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razón social</label>
    <type>Text</type>
</CustomField>