force-app/main/default/objects/Opportunity/fields/Rechazo_validaci_n_descuentos__c.field-meta.xml
<CustomField>
    <fullName>Rechazo_validaci_n_descuentos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechazo validación descuentos</label>
    <type>Checkbox</type>
</CustomField>