force-app/main/default/objects/Opportunity/fields/RecursosHumanos__c.field-meta.xml
<CustomField>
    <fullName>RecursosHumanos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recursos humanos</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Recursos humanos)</relationshipLabel>
    <relationshipName>Oportunidades4</relationshipName>
    <type>Lookup</type>
</CustomField>