force-app/main/default/objects/Opportunity/fields/RegistroPatronal__c.field-meta.xml
<CustomField>
    <fullName>RegistroPatronal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registro Patronal</label>
    <type>Checkbox</type>
</CustomField>