force-app/main/default/objects/Opportunity/fields/RegistroPatronalOPAM__c.field-meta.xml
<CustomField>
    <fullName>RegistroPatronalOPAM__c</fullName>
    <label>Registro patronal OPAM</label>
    <length>11</length>
    <type>Text</type>
</CustomField>