force-app/main/default/objects/Opportunity/fields/Sector_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Sector_Cuenta__c</fullName>
    <formula>text(Account.Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector Cuenta</label>
    <type>Text</type>
</CustomField>