force-app/main/default/objects/Opportunity/fields/Segmento_del_usuario__c.field-meta.xml
<CustomField>
    <fullName>Segmento_del_usuario__c</fullName>
    <formula>TEXT(Owner.Segmento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento del usuario</label>
    <type>Text</type>
</CustomField>