force-app/main/default/objects/Opportunity/fields/SegmentoCuenta_FText__c.field-meta.xml
<CustomField>
    <fullName>SegmentoCuenta_FText__c</fullName>
    <formula>Account.Segmento2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento de la Cuenta</label>
    <type>Text</type>
</CustomField>