force-app/main/default/objects/Opportunity/fields/Solicitar_validaci_n_descuentos__c.field-meta.xml
<CustomField>
    <fullName>Solicitar_validaci_n_descuentos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo control para el proceso de aprobación.</description>
    <label>Solicitar validación descuentos</label>
    <type>Checkbox</type>
</CustomField>