force-app/main/default/objects/Opportunity/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Fórmula que obtiene la solución seleccionada en la oportunidad y la convierte en un ícono respectivamente.</description>
    <formula>IF(
	ISBLANK(TEXT(Familia__c)),
	&#39;Sin Solución&#39; ,
	IMAGE(&quot;/resource/Soluciones/&quot;&amp;SUBSTITUTE(TEXT(Familia__c),&quot; &quot;,&quot;&quot;)&amp;&quot;.PNG&quot;,TEXT(Familia__c), 45, -1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solución</label>
    <type>Text</type>
</CustomField>