force-app/main/default/objects/Opportunity/fields/StatusApprovalBPfleet__c.field-meta.xml
<CustomField>
    <fullName>StatusApprovalBPfleet__c</fullName>
    <label>Estatus aprobación BPfleet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EstatusAprobacionesBP</valueSetName>
    </valueSet>
</CustomField>