force-app/main/default/objects/Opportunity/fields/Sub_estatus__c.field-meta.xml
<CustomField>
    <fullName>Sub_estatus__c</fullName>
    <label>Sub-estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotización en análisis de aprobación</fullName>
            </value>
            <value>
                <fullName>Impacto - COVID19</fullName>
            </value>
            <value>
                <fullName>Esperando corrección del comercial</fullName>
                <isActive>false</isActive>
                <label>Esperando corrección del comercial</label>
            </value>
            <value>
                <fullName>No se ha  tomado capacitación</fullName>
                <isActive>false</isActive>
                <label>No se ha  tomado capacitación</label>
            </value>
            <value>
                <fullName>No se ha alcanzado  el VE</fullName>
                <isActive>false</isActive>
                <label>No se ha alcanzado  el VE</label>
            </value>
            <value>
                <fullName>No tiene fecha de inicio de operación</fullName>
                <isActive>false</isActive>
                <label>No tiene fecha de inicio de operación</label>
            </value>
            <value>
                <fullName>Otro Motivo</fullName>
                <isActive>false</isActive>
                <label>Otro Motivo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>