force-app/main/default/objects/Opportunity/fields/Submotivo_PL__c.field-meta.xml
<CustomField>
    <fullName>Submotivo_PL__c</fullName>
    <label>Submotivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atencion a clientes</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Implementacion</fullName>
            </value>
            <value>
                <fullName>Logistica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>