force-app/main/default/objects/Opportunity/fields/SubOrigen__c.field-meta.xml
<CustomField>
    <fullName>SubOrigen__c</fullName>
    <label>SubOrigen</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>Afiliados</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Aspel</fullName>
            </value>
            <value>
                <fullName>Aura Digital</fullName>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
            <value>
                <fullName>BING</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Carlos Kiviat</fullName>
            </value>
            <value>
                <fullName>Cartera ejecutivo</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Cliente de grupo</fullName>
            </value>
            <value>
                <fullName>Companeo</fullName>
            </value>
            <value>
                <fullName>Cotizador</fullName>
            </value>
            <value>
                <fullName>Duns</fullName>
            </value>
            <value>
                <fullName>El financiero</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Enconta</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Fernando Granados</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Firma corporativa</fullName>
            </value>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>Francisco Salgado</fullName>
            </value>
            <value>
                <fullName>Global Data Base</fullName>
            </value>
            <value>
                <fullName>Google+</fullName>
            </value>
            <value>
                <fullName>Hector Sanchez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>