force-app/main/default/objects/Opportunity/fields/SubtipoNegocio__c.field-meta.xml
<CustomField>
    <fullName>SubtipoNegocio__c</fullName>
    <description>Campo dependiente de tipo</description>
    <label>Subtipo de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pedido único</fullName>
            </value>
            <value>
                <fullName>Virgen</fullName>
            </value>
            <value>
                <fullName>Mercado</fullName>
            </value>
            <value>
                <fullName>Grupo</fullName>
            </value>
            <value>
                <fullName>Cruzada</fullName>
            </value>
            <value>
                <fullName>Trade Marketing</fullName>
            </value>
            <value>
                <fullName>Renegociación</fullName>
            </value>
            <value>
                <fullName>Migración</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>