force-app/main/default/objects/Opportunity/fields/TiempoEstimadoDecision__c.field-meta.xml
<CustomField>
    <fullName>TiempoEstimadoDecision__c</fullName>
    <label>Tiempo estimado decisión</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inmediato</fullName>
            </value>
            <value>
                <fullName>1-2 meses</fullName>
            </value>
            <value>
                <fullName>2-6 meses</fullName>
            </value>
            <value>
                <fullName>6-12 meses</fullName>
            </value>
            <value>
                <fullName>Próximo año</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>