force-app/main/default/objects/Opportunity/fields/TimestampContrato__c.field-meta.xml
<CustomField>
    <fullName>TimestampContrato__c</fullName>
    <label>Timestamp Contrato</label>
    <type>DateTime</type>
</CustomField>