force-app/main/default/objects/Opportunity/fields/TimestampCotizacion__c.field-meta.xml
<CustomField>
    <fullName>TimestampCotizacion__c</fullName>
    <label>Timestamp Cotización</label>
    <type>DateTime</type>
</CustomField>