force-app/main/default/objects/Opportunity/fields/TimestampGanada__c.field-meta.xml
<CustomField>
    <fullName>TimestampGanada__c</fullName>
    <label>Timestamp ganada</label>
    <type>DateTime</type>
</CustomField>