force-app/main/default/objects/Opportunity/fields/TimestampImplementacion__c.field-meta.xml
<CustomField>
    <fullName>TimestampImplementacion__c</fullName>
    <label>Timestamp Implementación</label>
    <type>DateTime</type>
</CustomField>