force-app/main/default/objects/Opportunity/fields/TimestampPedido__c.field-meta.xml
<CustomField>
    <fullName>TimestampPedido__c</fullName>
    <label>Timestamp pedido</label>
    <type>DateTime</type>
</CustomField>