force-app/main/default/objects/Opportunity/fields/TimestampPerdida__c.field-meta.xml
<CustomField>
    <fullName>TimestampPerdida__c</fullName>
    <label>Timestamp perdida</label>
    <type>DateTime</type>
</CustomField>