force-app/main/default/objects/Opportunity/fields/TimestampPiloto__c.field-meta.xml
<CustomField>
    <fullName>TimestampPiloto__c</fullName>
    <label>Timestamp piloto</label>
    <type>DateTime</type>
</CustomField>