force-app/main/default/objects/Opportunity/fields/TimestampProspeccion__c.field-meta.xml
<CustomField>
    <fullName>TimestampProspeccion__c</fullName>
    <label>Timestamp Prospección</label>
    <type>DateTime</type>
</CustomField>