force-app/main/default/objects/Opportunity/fields/TipoDocu__c.field-meta.xml
<CustomField>
    <fullName>TipoDocu__c</fullName>
    <label>Tipo doc.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>