force-app/main/default/objects/Opportunity/fields/TipoSolucion__c.field-meta.xml
<CustomField>
    <fullName>TipoSolucion__c</fullName>
    <label>Tipo de producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Básico</fullName>
            </value>
            <value>
                <fullName>Avanzado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>